--- a/index.html
+++ b/index.html
@@ -39,10 +39,65 @@
         <ul></ul>
       </nav>
       <section>
-        <h1>
-<a name="boltengine" class="anchor" href="#boltengine"><span class="octicon octicon-link"></span></a>BoltEngine</h1>
+        <h3>
+<a name="boltengine--multi-platform-2d-graphic-engine" class="anchor" href="#boltengine--multi-platform-2d-graphic-engine"><span class="octicon octicon-link"></span></a>BoltEngine : multi-platform 2d graphic engine</h3>
 
-<p>A multi-platform 2d graphic engine</p>
+<p>You can clone BoltEngine like this:</p>
+
+<pre><code>$ cd your_repo_root
+$ git clone https://github.com/JoyLeeSoft/BoltEngine.git
+</code></pre>
+
+<p><a href="https://JoyLeeSoft.github.io/BoltEngine">Go to BoltEngine blog</a></p>
+
+<h3>
+<a name="table-of-contents" class="anchor" href="#table-of-contents"><span class="octicon octicon-link"></span></a>Table of Contents</h3>
+
+<p><a href="#license">License</a></p>
+
+<p><a href="#requirements">Requirements</a></p>
+
+<p><a href="#troubleshooting">Troubleshooting</a></p>
+
+<p><a name="license"></a></p>
+
+<h3>
+<a name="license" class="anchor" href="#license"><span class="octicon octicon-link"></span></a>License</h3>
+
+<p>BoltEngine is under The BSD License.</p>
+
+<p><a name="requirements"></a></p>
+
+<h3>
+<a name="requirements" class="anchor" href="#requirements"><span class="octicon octicon-link"></span></a>Requirements</h3>
+
+<p>To use (general):</p>
+
+<ul>
+<li>C++ Standard Template Library (STL)</li>
+</ul><p>Window(s):</p>
+
+<ul>
+<li>Bolt***Window plugin (*** is window name. ex: BoltWin32Window)</li>
+</ul><p>Renderer(s):</p>
+
+<ul>
+<li>Bolt***Renderer plugin (*** is renderer name. ex: BoltD2D1Renderer)</li>
+</ul><p>If you want to DirectX renderer plugin, you need to install DirectX SDK June 2010.</p>
+
+<p>If you want to OpenGL renderer plugin, you need to install OpenGL SDK.</p>
+
+<p>Plugins are enclosed. (BoltWin32Window / BoltD2D1Renderer)</p>
+
+<p><a name="troubleshooting"></a></p>
+
+<h3>
+<a name="troubleshooting" class="anchor" href="#troubleshooting"><span class="octicon octicon-link"></span></a>Troubleshooting</h3>
+
+<p>No bugs found so far.</p>
+
+<p>If you find some new bugs, 
+Please, tell me by e-mail <a href="mailto:jhlcooky@gmail.com">jhlcooky@gmail.com</a></p>
       </section>
       <footer>
         <p>Project maintained by <a href="https://github.com/JoyLeeSoft">JoyLeeSoft</a></p>
