--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Boltengine by JoyLeeSoft</title>
+    <title>BoltEngine by JoyLeeSoft</title>
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
@@ -17,7 +17,7 @@
   <body>
 
       <header>
-        <h1>Boltengine</h1>
+        <h1>BoltEngine</h1>
         <p>A multi-platform 2d graphic engine</p>
       </header>
 
@@ -83,9 +83,9 @@ $ git clone https://github.com/JoyLeeSoft/BoltEngine.git
 
 <ul>
 <li>Bolt***Renderer plugin (*** is renderer name. ex: BoltD2D1Renderer)</li>
-</ul><p>If you want to DirectX renderer plugin, you need to install DirectX SDK June 2010.</p>
+</ul><p>If you want to use DirectX renderer plugin, you need to install DirectX SDK June 2010.</p>
 
-<p>If you want to OpenGL renderer plugin, you need to install OpenGL SDK.</p>
+<p>If you want to use OpenGL renderer plugin, you need to install OpenGL SDK.</p>
 
 <p>Plugins are enclosed. (BoltWin32Window / BoltD2D1Renderer)</p>
 
