Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -83,9 +83,9 @@ $ git clone https://github.com/JoyLeeSoft/BoltEngine.git
 
 <ul>
 <li>Bolt***Renderer plugin (*** is renderer name. ex: BoltD2D1Renderer)</li>
-</ul><p>If you want to use DirectX renderer plugin, you need to install DirectX SDK June 2010.</p>
+</ul><p>If you want to DirectX renderer plugin, you need to install DirectX SDK June 2010.</p>
 
-<p>If you want to use OpenGL renderer plugin, you need to install OpenGL SDK.</p>
+<p>If you want to OpenGL renderer plugin, you need to install OpenGL SDK.</p>
 
 <p>Plugins are enclosed. (BoltWin32Window / BoltD2D1Renderer)</p>
 
