--- a/index.html
+++ b/index.html
@@ -96,8 +96,7 @@ $ git clone https://github.com/JoyLeeSoft/BoltEngine.git
 
 <p>No bugs found so far.</p>
 
-<p>If you find some new bugs, 
-Please, tell me by e-mail <a href="mailto:jhlcooky@gmail.com">jhlcooky@gmail.com</a></p>
+<p>If you find some new bugs, Please, tell me by e-mail <a href="mailto:jhlcooky@gmail.com">jhlcooky@gmail.com</a></p>
       </section>
       <footer>
         <p>Project maintained by <a href="https://github.com/JoyLeeSoft">JoyLeeSoft</a></p>
