--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 $ git clone https://github.com/JoyLeeSoft/BoltEngine.git
 </code></pre>
 
-<p><a href="https://JoyLeeSoft.github.io/BoltEngine/reference/html">Go to BoltEngine reference</a></p>
+<p><a href="https://JoyLeeSoft.github.io/BoltEngine/reference/html">Go to BoltEngine API reference</a></p>
 
 <h3>
 <a name="table-of-contents" class="anchor" href="#table-of-contents"><span class="octicon octicon-link"></span></a>Table of Contents</h3>
